<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/locationAccess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/locationpin"
    tools:context="com.example.thomas.campuscare.LocationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="122dp"
        android:layout_height="26dp"
        android:layout_marginBottom="185dp"
        android:text="@string/locationaccess"
        android:textColor= "@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/allowAccess"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginBottom="114dp"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:text="@string/allowaccess"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:text="@string/enableLocBut"
        android:id="@+id/enableLocBut"
        android:layout_width="247dp"
        android:layout_height="67dp"
        android:background="@drawable/mybutton"
        android:layout_marginBottom="25dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

</android.support.constraint.ConstraintLayout>
